# HDOW-Backend-master

./: build.sh  pyproject.toml  requirements.txt
backend/: asgi.py  settings.py  urls.py  wsgi.py
client/: admin.py  forms.py  serializers.py  urls.py  views.py
core/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_echo_patient.py  0003_alter_echo_patient.py  0004_alter_case_client.py  0005_alter_case_technician.py  0006_alter_case_technician.py  0007_alter_medicaldoctor_account.py  0008_alter_study_aorta.py  0009_user_create_at.py  0010_alter_case_related_study.py  0011_alter_case_related_study.py  0012_alter_case_related_study.py  0013_alter_case_related_study.py  0014_study_client.py  0015_alter_study_annulus_alter_study_apex_and_more.py
static/css/: main.css
static/js/: cases.js  signin-signup.js
supervisor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
supervisor/migrations/: 0001_initial.py  0002_supervisor_name.py  0003_rename_name_supervisor_abbreviated_name.py
technician/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
technician/migrations/: 0001_initial.py  0002_alter_technician_account.py
templates/client/: doctors.html  newdoctor.html  newpatient.html  patientdetail.html  patients.html
templates/components/: footer.html  head.html  navbar.html  sidebar.html
templates/core/: casedetail.html  cases.html  newcase.html
templates/echo/: echodetail.html  echos.html  newecho.html
templates/registration/: login.html
(+3 files in other folders)
