[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "A short description of the package."
authors = ["Sina Sharifkazemi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.1"
django = "^4.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
python-dateutil = "^2.8.2"
whitenoise = "^6.2.0"
Pillow = "^9.1.1"
gunicorn = "^20.1.0"